--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,11 @@
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "angular-touch": "^1.4.0",
+    "d3": "^3.5.16",
+    "moment": "^2.13.0",
+    "mapbox.js": "^2.4.0",
+    "leaflet": "^0.7.7"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
