--- a/bower.json
+++ b/bower.json
@@ -12,8 +12,10 @@
     "angular-touch": "^1.4.0",
     "d3": "^3.5.16",
     "moment": "^2.13.0",
+    "leaflet": "^0.7.7",
     "mapbox.js": "^2.4.0",
-    "leaflet": "^0.7.7"
+    "scroll-trigger": "^0.5.4",
+    "ngSticky": "^1.8.10"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
