--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "leaflet": "^0.7.7",
     "mapbox.js": "^2.4.0",
     "scroll-trigger": "^0.5.4",
-    "ngSticky": "^1.8.10"
+    "ngSticky": "^1.8.10",
+    "lodash": "^4.11.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
