--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "mapbox.js": "^2.4.0",
     "scroll-trigger": "^0.5.4",
     "ngSticky": "^1.8.10",
-    "lodash": "^4.11.2"
+    "lodash": "^4.11.2",
+    "angular-scroll": "^1.0.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
