--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.4.0",
+    "jquery": "1.9.1 - 2",
     "bootstrap-sass-official": "^3.2.0",
     "angular-animate": "^1.4.0",
     "angular-cookies": "^1.4.0",
@@ -14,8 +15,8 @@
     "moment": "^2.13.0",
     "leaflet": "^0.7.7",
     "mapbox.js": "^2.4.0",
-    "scroll-trigger": "^0.5.4",
     "ngSticky": "^1.8.10",
+    "scroll-trigger": "^0.5.4",
     "lodash": "^4.11.2",
     "angular-scroll": "^1.0.0"
   },
